android-deploy を Scala プロジェクトとして修正